k8s/api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: simulador-api
  labels:
    app: simulador-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: simulador-api
  template:
    metadata:
      labels:
        app: simulador-api
    spec:
      containers:
        - name: simulador-api
          image: ghcr.io/speedfick/simulador-api:latest
          ports:
            - containerPort: 8080
