k8s/minio-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: minio-service
spec:
  selector:
    app: minio
  ports:
    - protocol: TCP
      name: minio-port-9000
      port: 9000
      targetPort: 9000
      nodePort: 30900
    - protocol: TCP
      name: minio-port-9001
      port: 9001
      targetPort: 9001
      nodePort: 30901
  type: NodePort
